# AgVoiceX

./: .env.example  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  SUPPORT.md  crop_transparent.py  docker-compose.yml  make_transparent.py  run_backend.sh
backend/: Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial_schema.py  0002_multi_tenant_agents.py  0003_business_layer.py  0004_reservation_business_scope.py  0005_agent_runtime.py  0006_white_label_saas.py  0007_hardening_indexes.py
backend/app/: main.py
backend/app/api/: middleware.py
backend/app/core/: config.py  logging.py
backend/app/models/: __init__.py  agent_runtime.py  agents.py  business_settings.py  businesses.py  conversation_sessions.py  conversations.py  customers.py  knowledge.py  knowledge_chunks.py  organizations.py  prompts.py  reservations.py  saas.py  system_errors.py
backend/app/schemas/: agents.py  ai.py  business_settings.py  conversations.py  customers.py  intents.py  knowledge.py  prompts.py  reservations.py  saas.py  settings.py  tenancy.py
backend/app/services/: agent_runtime.py  agents.py  ai_providers.py  ai_settings.py  business_settings.py  conversations.py  customers.py  event_bus.py  knowledge.py  memory.py  ollama.py  planner.py  (+11 more)
backend/scripts/: seed_restaurant_demo.py
backend/tests/: test_admin_ui_support.py  test_agent_runtime.py  test_ai_providers.py  test_hardening.py  test_multi_tenant_services.py  test_ollama_manager.py  test_reservation_engine.py  test_white_label_saas.py
(+80 files in other folders)
