[project]
name = "voice-agent-backend"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
  "alembic>=1.13.2",
  "email-validator>=2.2.0",
  "fastapi>=0.115.0",
  "httpx>=0.27.2",
  "psycopg[binary]>=3.2.1",
  "pydantic>=2.9.2",
  "pydantic-settings>=2.5.2",
  "python-multipart>=0.0.9",
  "python-dotenv>=1.0.1",
  "redis>=5.0.8",
  "sqlalchemy>=2.0.35",
  "uvicorn[standard]>=0.30.6",
  "websockets>=16.0",
  "setuptools<81.0.0"
]

[project.optional-dependencies]
voice = [
  "mlx-whisper",
  "TTS>=0.22.0",
  "transformers==4.36.2",
  "torch==2.5.1",
  "torchaudio==2.5.1"
]
dev = [
  "pytest>=8.3.3",
  "pytest-asyncio>=0.24.0",
  "ruff>=0.6.8"
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.setuptools.packages.find]
include = ["app*"]
